# rust-react-starter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  api-tests.http  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: Cargo.toml  build.rs
backend/src/: database.rs  lib.rs  main.rs  test_utils.rs
backend/src/handlers/: mod.rs  projects.rs  users.rs
backend/src/models/: mod.rs  project.rs  user.rs
backend/tests/: integration_tests.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/lib/: api.ts
scripts/: prepare-db.js
shared/: types.ts
