[package]
name = "rust-react-starter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rust-react-starter"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.2"
tempfile = "3.8"
serial_test = "3.0"